[package]
name = "protoss"
version = "0.1.0"
authors = ["chandra.deepcontracts@gmail.com", "motozhikang@gmail.com"]
edition = "2018"

[lib]
name = "protoss"
path = "src/lib.rs"
crate-type = ["cdylib", "rlib"]


[dependencies]
cosmrs = {version= "0.14.0", features = ["cosmwasm"]}
tendermint-rpc = "0.32.0"
bytes = "1.1.0"
serde = "1.0.179"
serde_json = "1.0.104"
ethers = "2.0.8"
ethers-signers = "2.0.8"
hex = "0.4.3"
ecdsa = "0.16.7"
k256 = "0.13.1"
ethers-providers = "2.0.8"
rand = "0.8.5"
tiny-keccak = "2.0.2"
ibc-proto = "0.32.0"
tiny-bip39 = "1.0.0" # maybe unnecessary (contained in ethers_signers, in use by cosmos)


[dependencies.rand_core]
version = "0.6"
features = ["std"]
